--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@hapi/cookie": "^12.0.0",
     "@hapi/hapi": "^21.2.0",
     "@hapi/vision": "^7.0.0",
+    "dotenv": "^16.0.3",
     "handlebars": "^4.7.7",
     "uuid": "^9.0.0"
   }
