--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.0.3",
     "handlebars": "^4.7.7",
     "joi": "^17.7.0",
+    "lowdb": "^5.0.5",
     "uuid": "^9.0.0"
   }
 }
