--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "start": "node src/server.js",
-    "lint": "eslint . --ext .js"
+    "lint": "eslint . --ext .js",
+    "test": "mocha --ui tdd test/**.js -exit"
   },
   "author": "",
   "license": "ISC",
@@ -15,7 +16,9 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-import": "^2.27.4",
-    "prettier": "^2.8.3"
+    "prettier": "^2.8.3",
+    "chai": "^4.3.7",
+    "mocha": "^10.2.0"
   },
   "dependencies": {
     "@hapi/cookie": "^12.0.0",
