--- a/package.json
+++ b/package.json
@@ -7,18 +7,19 @@
   "scripts": {
     "start": "node src/server.js",
     "lint": "eslint . --ext .js",
-    "test": "mocha --ui tdd test/**.js -exit"
+    "test": "mocha --ui tdd test/**/*.js -exit"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "axios": "^1.3.4",
+    "chai": "^4.3.7",
     "eslint": "^8.32.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-import": "^2.27.4",
-    "prettier": "^2.8.3",
-    "chai": "^4.3.7",
-    "mocha": "^10.2.0"
+    "mocha": "^10.2.0",
+    "prettier": "^2.8.3"
   },
   "dependencies": {
     "@hapi/cookie": "^12.0.0",
