--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   "scripts": {
     "start": "node src/server.js",
     "lint": "eslint . --ext .js",
+    "dev": "npx nodemon  src/server.js --ignore 'src/models/json/*.json'",
     "test": "mocha --ui tdd test/**/*.js -exit",
-    "dev": "npx nodemon  src/server.js"
+    "testmodels": "./node_modules/mocha/bin/mocha --ui tdd test/models/**/*.js",
+    "testapi": "./node_modules/mocha/bin/mocha --ui tdd test/api/**/*.js"
   },
   "author": "",
   "license": "ISC",
@@ -23,11 +25,14 @@
     "prettier": "^2.8.3"
   },
   "dependencies": {
+    "@hapi/boom": "10.0.1",
     "@hapi/cookie": "^12.0.0",
     "@hapi/hapi": "^21.2.0",
+    "@hapi/inert": "^7.1.0",
     "@hapi/vision": "^7.0.0",
     "dotenv": "^16.0.3",
     "handlebars": "^4.7.7",
+    "hapi-swagger": "^16.0.1",
     "joi": "^17.7.0",
     "lowdb": "^5.0.5",
     "uuid": "^9.0.0"
