--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "joi": "^17.7.0",
     "jsonwebtoken": "^9.0.0",
     "lowdb": "^5.0.5",
+    "mais-mongoose-seeder": "^1.0.7",
     "uuid": "^9.0.0"
   }
 }
