render deploy using cloudAtlas

--- a/.gitignore
+++ b/.gitignore
@@ -74,7 +74,7 @@ web_modules/
 .yarn-integrity
 
 # dotenv environment variables file
-.env
+# .env
 .env.test
 .env.production
 
@@ -122,6 +122,6 @@ dist
 .pnp.*
 
 #dotenv cookie login details
-.env
+# .env
 
 #test
