--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-cookie_name=playtime
+cookie_name=donation-web
 cookie_password=secretpasswordnotrevealedtoanyone
 
 # db=mongodb://127.0.0.1:27017/playtime?directConnection=true
