--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "npx nodemon  src/server.js --ignore 'src/models/json/*.json'",
     "test": "mocha --ui tdd test/**/*.js -exit",
     "testmodels": "./node_modules/mocha/bin/mocha --ui tdd test/models/**/*.js",
-    "testapi": "./node_modules/mocha/bin/mocha --ui tdd test/api/**/*.js"
+    "testapi": "./node_modules/mocha/bin/_mocha --ui tdd test/api/**/*.js -exit --timeout 10000"
   },
   "author": "",
   "license": "ISC",
@@ -40,7 +40,7 @@
     "mais-mongoose-seeder": "^1.0.7",
     "uuid": "^9.0.0"
   },
-  
+
   "engines": {
     "node": ">=18.0.0"
   }
