--- a/package.json
+++ b/package.json
@@ -38,9 +38,9 @@
     "jsonwebtoken": "^9.0.0",
     "lowdb": "^5.0.5",
     "mais-mongoose-seeder": "^1.0.7",
+    "mongoose": "^7.0.3",
     "uuid": "^9.0.0"
   },
-
   "engines": {
     "node": ">=18.0.0"
   }
